trying to fix siema on mobile 10

--- a/src/components/section-categories/categories-styles/category.css
+++ b/src/components/section-categories/categories-styles/category.css
@@ -10,41 +10,6 @@
   touch-action: pan-y;
 }
 
-.electronics-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.property-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.transport-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.business-and-services-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.recreation-and-sports-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.for-free-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
-.exchange-list {
-  -ms-touch-action: pan-y;
-  touch-action: pan-y;
-}
-
 .category-list:first-of-type {
   padding-top: 54px;
 }
@@ -82,6 +47,8 @@
 }
 
 .things-item {
+  -ms-touch-action: pan-y;
+  touch-action: pan-y;
   width: 280px;
   height: 305px;
   padding: 20px 0px;
